fix scrollbar on older firefox

--- a/assets/minima-overrides.css
+++ b/assets/minima-overrides.css
@@ -52,3 +52,7 @@
 .site-footer svg {
   vertical-align: middle;
 }
+
+body {
+  overflow-x: hidden;
+}
